--- a/workspace/RTGame/res/layout/activity_start.xml
+++ b/workspace/RTGame/res/layout/activity_start.xml
@@ -48,10 +48,22 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/dummy_button" 
                 android:onClick="startGame"
-                />
+                android:text="@string/dummy_button" />
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="173dp"
+            android:layout_height="102dp"
+            android:src="@drawable/tumor" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+        </LinearLayout>
+
     </FrameLayout>
 
 </FrameLayout>
